--- a/index.html
+++ b/index.html
@@ -74,14 +74,14 @@ Add your introduction to your step-by-step-guide, including a title, time requir
         <div class="introduction">
 
           <div class="information">
-            <h1>How to make an awesome ...</h1>
+            <h1>How to make a mediocre essay because you procrastinated for too long</h1>
 
             <hr>
-            <p><b>Assembly time:</b> 30 minutes<br>
-              <b>Awesome rating:</b> 10% awesome</p>
+            <p><b>Assembly time:</b> 2-3 hours<br>
+              <b>Awesome rating:</b> 0% awesome</p>
             <hr>
 
-            <p>Are you wondering how to make a cool rocket that can easily surpass a baking soda-vinegar rocket? It's really fun to make. Why don't you try to make it yourself? Follow the steps and you'll make a great rocket!</p>
+            <p>Are you wondering how to make a passable essay in the nick of time because, "oh my god this paper is due by midnight tongiht"?</p>
 
           </div>
 
@@ -95,11 +95,11 @@ Add your Things You'll Need.
 -->         
             <ul class="list-of-items">
               <li><h2>Things You'll Need</h2></li>
-              <li>Bottle</li>
-              <li>Cardboard</li>
-              <li>Hand pump (bicycle)</li>
-              <li>Cork (vintage wines)</li>
-              <li>Duct Tape</li>
+              <li>A computer</li>
+              <li>An internet connection</li>
+              <li>A will to live</li>
+              <li>Caffeine</li>
+              <li>Something to eat</li>
               <li>Water</li>
             </ul>
           </aside>
@@ -116,16 +116,16 @@ Add your steps. When you need a new step, copy and paste all of the code of an e
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Invert the bottle and cut three flippers of cardboard.</h3>
-              <p>This is necessary to hold the rocket at launch time. Make your best design.</p> 
+              <h3>Find somewhere far from you computer to put your phone down.</h3>
+              <p>This is necessary to keep your easily distracted self from constantly browsing Instagram or checking every non-urgent message you might receive.</p> 
             </div>
           </li>
 
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Tape them all to the bottle at an angle of about 120 degrees between them.</h3>
-              <p>Remember, the bottle must be upside down and the flippers must not be taped at the bottle's base.</p>
+              <h3>Eat the food you got for yourself now and make sure it's enough to keep you full.</h3>
+              <p>You need to do this to eliminate yet another distraction posed by the prospect of getting up to eat something later.</p>
 
               <!--
 This block contains a photo and has a caption.
