--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ IN THIS CHALLENGE, YOU WILL LEARN ABOUT:
 -->
 
 
-    <title>Firstname Lastname's Instruction Tips</title>
+    <title>Jack Dietlein's Twitter Management</title>
   <script src="https://thimble.mozilla.org/resources/remix/index.js" type="text/javascript"></script>
 </head>
   <body>
@@ -57,7 +57,7 @@ Replace the header contents:
 
     <header>          
       <img src="https://imgur.com/a/CIsXz96" width="100" align="right" height="100" alt="KH_monogram">            
-      <h1>Jack Dietlein's Low-Effort Essay Workshop</h1>
+      <h1>Jack Dietlein's Twitter Management</h1>
       <h3>An Instruction Challenge for JOUR108</h3>
 
     </header>
@@ -74,14 +74,14 @@ Add your introduction to your step-by-step-guide, including a title, time requir
         <div class="introduction">
 
           <div class="information">
-            <h1>How to make a mediocre essay because you procrastinated for too long</h1>
+            <h1>How to Remove Followers on Twitter (Desktop)</h1>
 
             <hr>
-            <p><b>Assembly time:</b> 2-3 hours<br>
-              <b>Awesome rating:</b> 0% awesome</p>
+            <p><b>Execution time:</b> 1-3 minutes<br>
+              <b>Awesome rating:</b> 5% awesome</p>
             <hr>
 
-            <p>Are you wondering how to make a passable essay in the nick of time because, "oh my god this paper is due by midnight tongiht"?</p>
+            <p>Are you wondering how to remove unwanted followers on your public Twitter account?</p>
 
           </div>
 
@@ -97,10 +97,6 @@ Add your Things You'll Need.
               <li><h2>Things You'll Need</h2></li>
               <li>A computer</li>
               <li>An internet connection</li>
-              <li>A will to live</li>
-              <li>Caffeine</li>
-              <li>Something to eat</li>
-              <li>Water</li>
             </ul>
           </aside>
         </div>
@@ -116,16 +112,16 @@ Add your steps. When you need a new step, copy and paste all of the code of an e
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Find somewhere far from you computer to put your phone down.</h3>
-              <p>This is necessary to keep your easily distracted self from constantly browsing Instagram or checking every non-urgent message you might receive.</p> 
+              <h3>Navigate to your Twitter page.</h3>
+              <p>If you aren't already logged in, you'll need to enter your Twitter-registered email address (or your phone number/username) and password.</p> 
             </div>
           </li>
 
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Eat the food you got for yourself now and make sure it's enough to keep you full.</h3>
-              <p>You need to do this to eliminate yet another distraction posed by the prospect of getting up to eat something later.</p>
+              <h3>Click the "Followers" option.</h3>
+              <p>This is on the left side of your Twitter feed, directly below your profile picture and background image.</p>
 
               <!--
 This block contains a photo and has a caption.
@@ -140,8 +136,8 @@ with a paragraph to create a photo with a caption.
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Make a hole through the cork so that the bicycle pump can easily fit into it.</h3>
-              <p>Fix the pump tube to it with plasticine.</p>
+              <h3>Click the "More user options" gear for your selected user.</h3>
+              <p>You'll find this to the left of the "Follow" (or "Following") button on a user's information box.</p>
 
 
               <iframe width="560" height="315" src="https://www.youtube.com/embed/tntOCGkgt98" frameborder="0" allowfullscreen></iframe>
@@ -152,16 +148,16 @@ with a paragraph to create a photo with a caption.
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Invert the bottle and cut three flippers of cardboard.</h3>
-              <p>This is necessary to hold the rocket at launch time. Make your best design.</p> 
+              <h3>Click "Block (username)" in the drop-down menu.</h3>
+              <p>Don't worry! You don't have to permanently block someone to remove them as a follower.</p> 
             </div>
           </li>
 
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Invert the bottle and cut three flippers of cardboard.</h3>
-              <p>This is necessary to hold the rocket at launch time. Make your best design.</p> 
+              <h3>Click "Block" again when prompted.</h3>
+              <p>And if you just want to remove this follower without keeping them blocked, simply unblock user after using the block to remove them.</p> 
             </div>
           </li>
 
@@ -181,7 +177,7 @@ Change the text and links in the footer of this page to acknowledge the sources 
 -->         
 
     <footer>
-      <p>The original how-to appeared in <a href="http://www.wikihow.com/Hide-Christmas/Birthday-Presents" title="How to Hide Christmas/Birthday Presents: 7 Steps - wikiHow">WikiHow</a>.</p>
+      <p>The original how-to appeared in <a href="https://www.wikihow.com/Remove-Followers-on-Twitter" title="How to Remove Followers on Twitter - wikiHow">WikiHow</a>.</p>
       <p>Images are by <a href="http://www.flickr.com/photos/puuikibeach/4655440844/" title="Aquapod™ Water Rocket Launcher in Action by puuikibeach, on Flickr">puuikibeach from Flickr</a></p>
     </footer>
 
