--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Replace the header contents:
 -->
 
     <header>          
-      <img src="https://www.flickr.com/photos/185949361@N08/49180959732/in/dateposted-public/"100" align="right" height="100">            
+      <img src="https://www.flickr.com/photos/185949361@N08/49180959732/in/dateposted-public/" "100" align="right" height="100" alt="KH_monogram">            
       <h1>Jack Dietlein's Twitter Management</h1>
       <h3>An Instruction Challenge for JOUR108</h3>
 
