--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@ This block contains a photo and has a caption.
 We have used a <div> to group and position the flickr photo
 with a paragraph to create a photo with a caption.
 -->
-              <a href="http://www.flickr.com/photos/hucker/132609525/" title="2006-04-22 Yaeum Middle School Rocket Day 19 by Stephen Hucker, on Flickr"><img alt="2006-04-22 Yaeum Middle School Rocket Day 19" height="%" width="%" src="http://farm1.staticflickr.com/52/132609525_8e6452161d.jpg" ></a>
-              <p class="caption">Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+              <a href="https://www.flickr.com/photos/185949361@N08/49180776771/in/dateposted-public/" title="Reference image"><img alt="Reference image" height="%" width="%" src="https://www.flickr.com/photos/185949361@N08/49180776771/in/dateposted-public/" ></a>
+              <p class="caption">Where to find the followers tab</p>
             </div>
           </li>
 
