--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@ Customise the visual style and appearance of your guide.
       }
 
       .content {
-        background: #fff;          /* CHANGE THE INSTRUCTION BACKGROUND COLOR HERE */
+        background: #ABC4FF;          /* CHANGE THE INSTRUCTION BACKGROUND COLOR HERE */
       }
 
       .step-by-step li:before {
