--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ with a paragraph to create a photo with a caption.
               <p>You'll find this to the left of the "Follow" (or "Following") button on a user's information box.</p>
 
 
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/tntOCGkgt98" frameborder="0" allowfullscreen></iframe>
+              <iframe width="560" height="315" src="https://www.youtube.com/watch?v=CgOoYHfjbn0" frameborder="0" allowfullscreen></iframe>
             </div>
 
           </li>
