--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Replace the header contents:
 -->
 
     <header>          
-      <img src="https://www.flickr.com/photos/185949361@N08/49181020892/in/dateposted-public/"100" align="right" height="100" alt="KH_monogram">            
+      <img src="https://www.flickr.com/photos/185949361@N08/49180687583/in/dateposted-public/"100" align="right" height="100" alt="KH_monogram">            
       <h1>Jack Dietlein's Twitter Management</h1>
       <h3>An Instruction Challenge for JOUR108</h3>
 
@@ -128,7 +128,7 @@ This block contains a photo and has a caption.
 We have used a <div> to group and position the flickr photo
 with a paragraph to create a photo with a caption.
 -->
-              <a href="https://www.flickr.com/photos/185949361@N08/49180776771/in/dateposted-public/" title="Reference image"><img alt="Reference image" height="%" width="%" src="https://www.flickr.com/photos/185949361@N08/49180776771/in/dateposted-public/" ></a>
+              <a href="https://www.flickr.com/photos/185949361@N08/49181394277/in/dateposted-public/" title="Reference image"><img alt="Reference image" height="%" width="%" src="https://www.flickr.com/photos/185949361@N08/49181394277/in/dateposted-public/" ></a>
               <p class="caption">Where to find the followers tab</p>
             </div>
           </li>
@@ -178,7 +178,7 @@ Change the text and links in the footer of this page to acknowledge the sources 
 
     <footer>
       <p>The original how-to appeared in <a href="https://www.wikihow.com/Remove-Followers-on-Twitter" title="How to Remove Followers on Twitter - wikiHow">WikiHow</a>.</p>
-      <p>Images are by <a href="http://www.flickr.com/photos/puuikibeach/4655440844/" title="Aquapod™ Water Rocket Launcher in Action by puuikibeach, on Flickr">puuikibeach from Flickr</a></p>
+      <p>Images are by <a href="https://www.flickr.com/photos/185949361@N08/with/49181394277/" title="Link to images used">Jack Dietlein on Flickr</a></p>
     </footer>
 
     <!--
